--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1284,6 +1284,15 @@ fieldset:disabled a.btn {
     letter-spacing: -0.96px;
 }
 
+.post-content h4 code {
+    background-color: transparent;
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0;
+    font-size: 90% !important;
+    vertical-align: baseline !important;
+}
+
 /* Pagination */
 .pagination a {
     filter: brightness(0.8) contrast(1.4);
