--- a/layouts/partials/docs_filetree.html
+++ b/layouts/partials/docs_filetree.html
@@ -26,7 +26,9 @@
 <aside class="docs-menu">
   <div class="docs-menu-content">
     <div id="searchbox">
-        <input id="searchInput" autofocus="" placeholder="Search ↵" aria-label="search" type="search" autocomplete="off">
+        <div class="searchInput">
+          <input id="searchInput" autofocus="" placeholder="Search ↵" aria-label="search" type="search" autocomplete="off">
+        </div>
         <ul id="searchResults" aria-label="search results"></ul>
     </div>
     {{ $pages := .Section.Pages }}
