--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1609,7 +1609,9 @@ html[class*="page-docs"] a[href*="example.com"] {
 
 .docs-toc .docs-toc-content,
 .docs-menu .docs-menu-content  {
-    width: 12rem;
+    width: auto;
+    min-width: 14rem;
+    max-width: 14rem;
     padding: 1rem;
     background: var(--body-background);
     position: sticky;
@@ -1618,6 +1620,11 @@ html[class*="page-docs"] a[href*="example.com"] {
     overflow-x: hidden;
     overflow-y: auto;
     height: 86vh;
+}
+
+.docs-toc .docs-toc-content {
+  min-width: 14rem;
+  max-width: 15rem;
 }
 
 .docs-toc .docs-toc-content,
@@ -1761,7 +1768,7 @@ html[class*="page-docs"] a[href*="example.com"] {
   background-color: var(--main-bg);
   top: 100px;
   position: fixed;
-  width: 10rem;
+  width: 12em;
 }
 
 .docs-menu .docs-menu-content > div#searchbox #searchInput[type="search"]::-webkit-search-cancel-button {
