--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1437,7 +1437,7 @@ details > summary > .details {
 }
 
 .page-screenshots.chocolat-fullscreen .chocolat-wrapper .screen-full-container,
-.page-screenshots .chocolat-wrapper .chocolat-bottom .chocolat-fullscreen,
+.chocolat-wrapper .chocolat-bottom .chocolat-fullscreen,
 .page-screenshots:not(.chocolat-fullscreen) .chocolat-close {
     display: none;
 }
