Fix to disable scroll propagation to main container

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1648,6 +1648,7 @@ html[class*="page-docs"] a[href*="example.com"] {
 .docs-toc .docs-toc-content,
 .docs-menu .docs-menu-content  {
     scrollbar-width: thin;
+    overscroll-behavior: contain;
 }
 
 .docs-toc .docs-toc-content::-webkit-scrollbar,
