--- a/layouts/partials/nav_menu.html
+++ b/layouts/partials/nav_menu.html
@@ -4,10 +4,21 @@
           <div class="hmenu-body-contents">
               <div class="hmenu-container">
                   <ul class="hmenu-links">
+                      <li><a href="/download/"><span>Download</span></a></li>
+                      <li><a href="/archives/"><span>Changelog</span></a></li>
+                      <li><a href="/faq/"><span>FAQ</span></a></li>
+                      <li><a href="/docs/"><span>Documentation</span></a></li>
+                      <li><a href="/search/"><span>Search</span></a></li>
+                  </ul>
+                  <div class="clearfix"></div>
+                  <hr>
+              </div>
+              <div class="hmenu-container">
+                  <ul class="hmenu-links">
                       <li><a href="/about/"><span>About</span></a></li>
                       <li><a href="/screenshots/"><span>Screenshots</span></a></li>
                       <li><a href="/community/"><span>Community</span></a></li>
-                      <li><a href="/faq/"><span>FAQ</span></a></li>
+                      <li><a href="/security/"><span>Security</span></a></li>
                       <li><a href="/supporters/"><span>Supporters</span></a></li>
                       <li><a href="/books/"><span>Books</span></a></li>
                       <li><a href="/tags/"><span>Tags</span></a></li>
