Add great deal of improvements to responsiveness

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,5 +1,7 @@
 /* Variables */
 :root {
+    --main-max-width: 900px;
+    --main-min-width: 800px;
     --main-bg: rgb(245, 245, 245);
     --main-bg-overlay: rgb(245, 245, 245, .6);
     --content: rgb(21, 21, 21);
@@ -148,7 +150,7 @@ strong code {
     height: 60px;
     min-height: 60px;
     max-height: 60px;
-    min-width: 304px;
+    min-width: 310px;
 }
 
 .header.no-z-index {
@@ -1093,8 +1095,12 @@ fieldset:disabled a.btn {
 #menu li > a > svg {
     height: 10px;
     vertical-align: text-top;
+    margin-top: -5px;
+    margin-left: -10px;
+  }
+#menu .hmenu-links li > a > svg {
+    margin-left: 0;
 }
-
 #menu span {
     padding: 0.233em 0.511em 0.311em 0.511em;
     border: 1px solid transparent;
@@ -1154,6 +1160,16 @@ fieldset:disabled a.btn {
 #menu .hmenu-panel li a.active {
     border-bottom: none;
     background-color: var(--menu-active-link);
+}
+@media screen and (max-width: 768px) {
+  #menu {
+    margin: auto 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  #menu {
+    margin: auto 10px;
+  }
 }
 .hmenu-panel .clearfix {
     clear: both;
@@ -1278,6 +1294,12 @@ fieldset:disabled a.btn {
 /* 
  * Content
  */
+ @media screen and (min-width: 768px) {
+  .main {
+    max-width: calc(var(--main-max-width) + var(--gap) * 2);
+  }
+}
+
 .page-search .page-header h1 > svg {
     width: 1.5rem;
     height: 1.5rem;
@@ -1597,7 +1619,7 @@ html[class*="page-docs"] a[href*="example.com"] {
 [class^="page-docs"] body > .main .post-single {
     flex-grow: 1;
     padding: 0 1.3rem;
-    max-width: calc(var(--main-width) + var(--gap) * 2);
+    max-width: calc(var(--main-max-width) + var(--gap) * 2);
 }
 
 [class^="page-docs"] p:has(a[href*="/docs/screenshots/"]) {
@@ -1692,26 +1714,44 @@ html[class*="page-docs"] a[href*="example.com"] {
   outline: 1px solid var(--border);
 }
 
-@media screen and (min-width: 901px) {
+/* .post-content a, */
+.toc a:hover {
+  box-shadow: none;
+}
+
+@media screen and (min-width: 1152px) {
     [class^="page-docs"] .post-single > .top-link {
         bottom: 4.666rem;
         position: sticky;
         float: right;
     }
-    .post-single > .toc,
-    .asideMobile {
+    [class^="page-docs"] .post-single > .toc,
+    [class^="page-docs"] .asideMobile {
         display: none;
     }
 
 }
+/* Conditional links inside dropdown */
 .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li,
 .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child {
   display: none;
 }
-@media screen and (max-width: 900px) {
+/* Forum link */
+@media screen and (max-width: 980px) {
   .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child {
     display: initial;
   }
+  .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(5) {
+    display: initial;
+  }
+
+  #menu > li:nth-child(5) {
+    display: none;
+  }
+
+}
+/* Documentation link */
+@media screen and (max-width: 900px) {
   .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(4) {
     display: initial;
   }
@@ -1721,7 +1761,7 @@ html[class*="page-docs"] a[href*="example.com"] {
   }
 
 }
-
+/* FAQ link */
 @media screen and (max-width: 700px) {
   .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(3) {
     display: initial;
@@ -1731,7 +1771,7 @@ html[class*="page-docs"] a[href*="example.com"] {
     display: none;
   }
 }
-
+/* Changelog link */
 @media screen and (max-width: 635px) {
   .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(2) {
     display: initial;
@@ -1741,7 +1781,7 @@ html[class*="page-docs"] a[href*="example.com"] {
     display: none;
   }
 }
-
+/* Download link */
 @media screen and (max-width: 517px) {
   .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(1) {
     display: initial;
@@ -1751,27 +1791,24 @@ html[class*="page-docs"] a[href*="example.com"] {
     display: none;
   }
 }
-
+/* Search link */
 @media screen and (max-width: 410px) {
-  :root {
-    --gap: 8px
-  }
-  .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(5) {
+  .hmenu-panel .hmenu-drop-down .hmenu-body-contents > .hmenu-container:first-child > .hmenu-links > li:nth-child(6) {
     display: initial;
   }
 
-  #menu > li:nth-child(5) {
+  #menu > li:nth-child(6) {
     display: none;
   }
   #menu {
-    margin: auto -0.333em auto 0;
+    margin: auto 0;
   }
   .hmenu-panel .hmenu-drop-down {
     width: 304px;
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1152px) {
     .docs-menu .docs-menu-content  {
         top: calc(8rem);
         height: 74vh;
@@ -1874,7 +1911,7 @@ html[class*="page-docs"] a[href*="example.com"] {
   width: 12em;
 }
 
-.docs-menu .docs-menu-content > div#searchbox #searchInput[type="search"]::-webkit-search-cancel-button {
+[type="search"]::-webkit-search-cancel-button {
   appearance: none;
 }
 
