Fix missing meta tags for version matching

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,4 +1,6 @@
 <meta name="generator" content="Hugo with PaperMod">
+<meta data-product="webmin" data-version="webmin-{{ site.Params.version.webmin }}.tar.gz">
+<meta data-product="usermin" data-version="usermin-{{ site.Params.version.usermin }}.tar.gz">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ if (eq site.Params.env "production") }}{{ site.Params.analytics.google.trackingCode.production }}{{ else }}{{ site.Params.analytics.google.trackingCode.devel }}{{ end }}"></script>
 <script>
