--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1472,6 +1472,15 @@ body:not(.dark) .entry-content {
     filter: brightness(.75)contrast(1.37) opacity(0.97) saturate(1.17);
 }
 
+@keyframes perspectiveAnimation {
+  0% {
+    transform: perspective(var(--main-max-width)) rotateY(-10deg) translateX(-2.5px) translateY(2.5px);
+  }
+  100% {
+    transform: perspective(var(--main-max-width)) rotateY(-15deg) translateX(0) translateY(0);
+  }
+}
+
 a.screenshot-entry {
   aspect-ratio: 16 / 8.88;
 
@@ -1484,8 +1493,7 @@ a.screenshot-entry {
 
   filter: saturate(1.14) brightness(1.01)contrast(0.99) hue-rotate(4deg);
 
-  transform: perspective(var(--main-max-width)) rotateY(-15deg);
-  transition: 0.4s ease-in-out transform, 0.4s ease-in-out box-shadow;
+  animation: perspectiveAnimation 5s ease-in-out forwards;
 
   border-radius: 2px;
   box-shadow: 1px 1px 0 1px #f9f9fb, -1px 0 28px 0 rgba(33, 32, 80, 0.01), 28px 28px 28px 0 rgba(33, 32, 80, 0.25);
