--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -9,6 +9,8 @@
     --primary: rgb(20, 20, 20);
     --secondary-strong: rgb(78, 78, 78);
 
+    --radius: 3px;
+    
     --border: rgb(221, 221, 221);
     --code-bg: rgb(235, 235, 235);
 
@@ -228,7 +230,7 @@ body.dark .logo>a>svg path {
     padding: 0.75rem 1.25rem;
     margin-bottom: 1rem;
     border: 1px solid transparent;
-    border-radius: 0.25rem;
+    border-radius: var(--radius);
 }
 .alert-primary {
     color: #004085;
@@ -307,7 +309,7 @@ body.dark .logo>a>svg path {
     text-align: center;
     white-space: nowrap;
     vertical-align: baseline;
-    border-radius: .25rem;
+    border-radius: var(--radius);
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .badge-primary {
@@ -377,7 +379,7 @@ body.dark .logo>a>svg path {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  border-radius: var(--radius);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -1066,7 +1068,7 @@ fieldset:disabled a.btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.3rem;
+  border-radius: var(--radius);
 }
 
 .btn-sm,
@@ -1074,7 +1076,7 @@ fieldset:disabled a.btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
-  border-radius: 0.2rem;
+  border-radius: var(--radius);
 }
 
 .btn-block {
@@ -1115,12 +1117,12 @@ fieldset:disabled a.btn {
 #menu span.active {
   background-color: var(--menu-active);
   border-bottom: none;
-  border-radius: calc(var(--radius) / 2);
+  border-radius: var(--radius);
   color: var(--primary);
   font-weight: 700;
 }
 #menu span.active.wm-menu {
-  border-radius: calc(var(--radius) / 2) calc(var(--radius) / 2) 0 0;
+  border-radius: var(--radius) var(--radius) 0 0;
 }
 
 #menu a span.wm.wm-search {
@@ -1190,8 +1192,8 @@ fieldset:disabled a.btn {
 }
 .hmenu-panel .hmenu-drop-down {
     border: 1px solid var(--tertiary);
-    border-radius: calc(var(--radius)/2) 0 calc(var(--radius)/2) calc(var(--radius)/2);
-    border-top-right-radius: 1px;
+    border-radius: var(--radius) 0 var(--radius) var(--radius);
+    border-top-right-radius: 0;
     box-shadow: 0 12px 12px rgba(0,0,0,0.15);
     background-color: var(--menu-active);
     z-index: 1000;
@@ -1376,7 +1378,8 @@ fieldset:disabled a.btn {
 
 /* Pagination */
 .pagination a {
-    filter: brightness(0.8) contrast(1.4);
+    filter: brightness(0.8) contrast(1.2);
+    border-radius: var(--radius);
 }
 
 /* Accordions */
@@ -1496,7 +1499,8 @@ a.screenshot-entry {
   /* animation: perspectiveAnimation 5s ease-in-out forwards; */
   transform: perspective(var(--main-max-width)) rotateY(-12.5deg);
 
-  border-radius: 2px;
+  border-radius: var(--radius);
+
   box-shadow: 1px 1px 0 1px #f9f9fb, -1px 0 28px 0 rgba(33, 32, 80, 0.01), 28px 28px 28px 0 rgba(33, 32, 80, 0.25);
   
   max-width: calc(var(--main-max-width) + var(--gap) * 2);
@@ -1533,7 +1537,7 @@ a.screenshot-entry {
     text-align: center;
     background-color: var(--code-bg);
     padding: 1em 0;
-    border-radius: calc(var(--radius)/2);
+    border-radius: var(--radius);
 }
 /* About */
 .page-about-jamie #previous-jobs + table > tbody > tr > td:first-child {
@@ -2043,7 +2047,7 @@ html,
 
 .docs-menu .docs-menu-content details > div.sub-section {
   background-color: var(--border);
-  border-radius: 4px;
+  border-radius: var(--radius);
   color: var(--primary);
   cursor: default;
   font-weight: 600;
